Fixed Footer Overlap Issues, home page font changes

--- a/Pages/Shared/_Layout.cshtml.css
+++ b/Pages/Shared/_Layout.cshtml.css
@@ -52,6 +52,7 @@ header {
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 4em;
   white-space: normal;
   background-color:#fff;
   z-index: 2;
